# secp256k1

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.build  README.md  build-order-to-matrix.py  build.py  conanfile.py
.conan/profiles/: linux-ci-cd
.github/actions/determine-version/: action.yml
.github/actions/replace-version/: action.yml
.github/actions/setup-conan/: action.yml
.github/workflows/: build-deps-with-container.yml  build-deps-without-container.yml  build-with-container.yml  knuth.yml
cmake/: Secp256k1Tools.cmake
contrib/: lax_der_parsing.c
include/secp256k1/: version.h
src/: libsecp256k1-config.h.cmake.in  tests.c
src/modules/schnorr/: main_impl.h  schnorr.h  schnorr_impl.h
